reduced img size & Increased font

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="character-tab"></div>
             <div id="info" class="characters">
                 <h2 id="identity">CHARACTER</h2>
-                <img id="Img" src="" alt="Character"/>
+                <img id="Img" src="https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif" alt="Character"/>
                 <h3 id="total">Total Votes</h3>
                 <div id=vote-form>
                     <form id="voting">
